@@ -2,6 +2,10 @@
 
 # Emulator core files
 src/vsync.c
+src/screenshot.c
+src/autostart.c
+src/sound.c
+src/event.c
 
 # Architecture Unix
 src/arch/unix/archdep.c
